make image handler and fixing 400 error when access a get api

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         </label>
     </form>
 
+    <input type="file" id="fileInput">
+    <button onclick="uploadFile()">Upload</button>
+
     <ul></ul>
     <script src="scripts.js" ></script>
 </body>
